# backend/internal/schemas/admin.go
@@ -1,0 +1,7 @@
+package schemas
+
+type CreateAdminInput struct {
+	Name     string `json:"name" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
